@@ -168,6 +168,7 @@ $wgIgnoredMessages = array(
 	'editpage-tos-summary',
 	'addsection-preload',
 	'addsection-editintro',
+	'longpage-hint',
 );
 
 /** Optional messages, which may be translated only if changed in the target language. */
